Fixed errors in the header, fixed dropdowns, fixed menu overflow, worked on hidden phone and email

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 
 body {
 	margin: 0;
+	background-color: #191919;
 }
 
 canvas {
@@ -20,49 +21,69 @@ h1 {
 	margin: 0;
 	padding: 0;
 	color: white;
-	z-index: 2;
+}
+
+h2 {
+	color: rgba(255,255,255,0.75);
+}
+
+h1:hover {
+	color: gray;
 }
 
 #mainHeader {
-	width: 96%;
-	padding: 2%;
+	position: relative;
+	width: 100%;
+	padding-top: 11%;
 	background-color: #C0C0C0;
 	opacity: 0.80;
     filter: alpha(opacity=80); /* For IE8 and earlier */
 }
 
 #mainMenu {
+	position: absolute;
 	background-color: black;
-	width: 100%;
+	width: 96%;
 	z-index: 5;
+	margin-left: 2%;
+	margin-right: 2%;
+	margin-top: -9%;
+
 }
 
-#mainHeader ul {
+#mainMenu li #activePage {
+	color: white;
+}
+
+#mainMenu li #activePage:hover {
+	color: gray;
+}
+
+#mainMenu ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
 }
 
-#mainHeader li {
+#mainMenu li {
 	background-color: black;
 	float: left;
-	display: inline;
+	display: inline-block;
 	margin-left: 0;
-	padding: 2%;
+	padding: 2% 1%;
 	text-align: center;
 }
 
-#mainHeader li a {
+#mainMenu li a {
 	display: block;
 	padding: 8px 11px;
 	color: gray;
 	font-size: 1.1em;
 	font-weight: bold;
-	line-height: 10px
+	line-height: 10px;
 }
 
-#mainHeader li a:hover {
+#mainMenu li a:hover {
 	color: white;
 }
 
@@ -73,12 +94,12 @@ h1 {
 	margin-left: 10%;
 	margin-right: 10%;
 	margin-bottom: 5%;
-	height: 500%;
 	background-color: rgba(0,0,0,0.80);
 }
 
 #mainBody p {
     text-indent: 50px;
+    line-height: 25px;
 }
 
 #mainBody p {
@@ -87,10 +108,13 @@ h1 {
 }
 
 .dropdown {
-	color: gray;
+	color: black;
     position: relative;
     display: inline;
-    display: block;
+}
+
+.dropdown span {
+	display: block;
 	padding: 8px 11px;
 	color: gray;
 	font-size: 1.1em;
@@ -98,23 +122,42 @@ h1 {
 	line-height: 10px
 }
 
+.dropdown span:hover {
+	color: white;
+}
+
+.dropdown-content span {
+	color: black;
+}
+
+.dropdown-content span:hover {
+	color: gray;
+}
+
+.dropdown p:hover {
+	color: gray;
+}
+
+.dropdown-content span {
+	font-size: 1em;
+	font-weight: normal;
+	line-height: 0;
+	padding: 5px auto;
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 260px;
+    min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
-    margin-top: 5px;
-    z-index: 10;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
-    z-index: 100;
 }
 
-#keepRight {
-	float:right;
-	margin-right:5%;
+.clearfix {
+  overflow: auto;
 }
